--- a/src/Layout/Footer.css
+++ b/src/Layout/Footer.css
@@ -1,6 +1,6 @@
 /* Footer Styling */
 .footer {
-    background-color: #59666c;
+    background-color: #2d3539;
     /* Dark background color */
     color: #ffffff;
     /* White text color */
