--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -9,6 +9,7 @@
     color: #fff;
     /* Ensure text stands out on the background */
     gap: 2rem;
+    margin-top: -180px;
 }
 
 .dashboard-image {
@@ -119,7 +120,7 @@
     opacity: 0;
     animation: fadeIn 1s forwards;
     animation-delay: 0.3s;
-
+margin-top: -80px;
 }
 
 /* Animation for the card entrance */
