--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -46,15 +46,8 @@
 
 
 .dashboard-content {
-    flex: 1;
-    padding: 2rem;
-    background: rgba(255, 255, 255, 0.1);
+    width: 50%;
 
-    border-radius: 15px;
-    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
-    backdrop-filter: blur(10px);
-
-    text-align: left;
 }
 
 .dashboard-content h2 {
@@ -73,7 +66,13 @@
     /* color: #f0f0f0; */
     /* color: #ffffff; */
     color: #37474f;
+    flex: 1;
+    padding: 2rem;
+    background: rgba(255, 255, 255, 0.1);
 
+    border-radius: 15px;
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(10px);
     margin-bottom: 1rem;
 }
 
@@ -95,7 +94,7 @@
     }
 
     .dashboard-content h2 {
-        font-size: 2.4rem;
+        font-size: 2.8rem;
     }
 
     .dashboard-content p {
