--- a/src/components/Manage-Account/Doctor-manage/DoctorManage.css
+++ b/src/components/Manage-Account/Doctor-manage/DoctorManage.css
@@ -80,15 +80,45 @@
 /* ------------------------------------------- */
 
 .search-box {
-    margin: 20px 0;
+    margin-left: 78%;
+    margin-top: -55px;}
+
+    /* Container for the search bar */
+.search-container {
     display: flex;
-    justify-content: center;
-}
+    justify-content: flex-end;
+    align-items: center;
+    margin-bottom: 20px;
+  }
 
 .search-input {
-    padding: 8px;
-    width: 50%;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    font-size: 14px;
+     width: 195px;
+  padding: 8px 12px;
+  font-size: 16px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  margin-right: 10px;
+  transition: border-color 0.3s;
+  background-color: #ddd;
 }
+.search-input:focus {
+    border-color: #007bff;
+    outline: none;
+  }
+  
+  /* Style for the search button */
+.search-button {
+    padding: 8px 16px;
+    background-color: #007bff;
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  /* Hover effect for the search button */
+  .search-button:hover {
+    background-color: #0056b3;
+  }
