--- a/src/components/Manage-Account/Doctor-manage/DoctorManage.css
+++ b/src/components/Manage-Account/Doctor-manage/DoctorManage.css
@@ -46,12 +46,12 @@
 .doctors-table {
     width: 100%;
     border-collapse: collapse;
-    margin-top: 20px;
+    margin-top: 25px;
 }
 
 .doctors-table th,
 .doctors-table td {
-    padding: 10px;
+    padding: 11px;
     text-align: left;
     border: 1px solid #ddd;
 }
@@ -71,6 +71,8 @@
 .doctor-image {
     width: 50px;
     height: 50px;
+    margin-left: 28px;
+
     border-radius: 50%;
     object-fit: cover;
     /* border: 2px solid #0096FF; */
@@ -78,7 +80,11 @@
 }
 
 /* ------------------------------------------- */
-
+.custom-modal .modal-dialog {
+    max-width: 50%;
+    margin: 120px auto;
+  }
+  
 .search-box {
     margin-left: 78%;
     margin-top: -55px;}
@@ -99,7 +105,7 @@
   border: 1px solid #ccc;
   margin-right: 10px;
   transition: border-color 0.3s;
-  background-color: #ddd;
+  
 }
 .search-input:focus {
     border-color: #007bff;
