--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,3 +1,50 @@
+.about-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+    text-align: center;
+    padding: 20px;
+  }
+  
+  .welcome-section {
+    animation: fadeIn 2s ease-in-out;
+    border-radius: 15px;
+    margin-top: 60px;
+    padding: 20px;
+  }
+  
+  .welcome-text {
+    font-size: 2.3rem;
+    /* color: #ffffff; */
+        /* color: linear-gradient(135deg, #6a11cb, #2575fc); */
+        color: #001f3f; /* Dark Navy */
+
+    /* Dark green for trust and health association */
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  
+  .welcome-subtext {
+    margin-top: 0.5rem;
+    font-size: 1.2rem;
+    color: #b3e5fc; /* Light Sky Blue */
+    /* Medium green for readability */
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+  
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+
 .dashboard-container {
     display: flex;
     justify-content: space-between;
@@ -18,6 +65,7 @@
     justify-content: center;
     align-items: center;
     padding: 1rem;
+    margin-left: -120px;
 }
 
 .dashboard-image-style {
@@ -25,6 +73,7 @@
     max-width: 550px;
     animation: upDownMovement 4s infinite;
     /* Adds the up and down movement */
+
 }
 
 @keyframes upDownMovement {
