--- a/src/components/Manage-Account/Doctor-manage/DoctorManage.css
+++ b/src/components/Manage-Account/Doctor-manage/DoctorManage.css
@@ -85,10 +85,10 @@
 }
 
 /* ------------------------------------------- */
-.custom-modal .modal-dialog {
+/* .custom-modal .modal-dialog {
     max-width: 50%;
     margin: 120px auto;
-  }
+  } */
   
 .search-bar {
     margin-left: 78%;
